--- a/CyberApp.csproj
+++ b/CyberApp.csproj
@@ -35,10 +35,12 @@
         <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
 
         <!-- Splash Screen -->
-        <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
+        <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#C93C29" BaseSize="128,128" />
 
         <!-- Images -->
-        <MauiImage Include="Resources\Images\*" />
+        <MauiImage Include="Resources\Images\*svg" />
+        <MauiImage Include="Resources\Images\*png" />
+        <MauiImage Include="Resources\Images\*jpg" />
         <MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
 
         <!-- Custom Fonts -->
@@ -50,16 +52,13 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+        <PackageReference Include="System.Drawing.Common" Version="8.0.0-preview.2.23128.3" />
     </ItemGroup>
 
     <ItemGroup>
-      <None Remove="Resources\Images\icons\settings.svg" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <EmbeddedResource Include="Resources\Images\settings.svg">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </EmbeddedResource>
+      <Reference Include="Mono.Android">
+        <HintPath>..\..\..\..\Program Files\dotnet\packs\Microsoft.Android.Ref.33\33.0.26\ref\net7.0\Mono.Android.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
