--- a/CyberApp.csproj
+++ b/CyberApp.csproj
@@ -70,7 +70,7 @@
         <DependentUpon>App.xaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
-      <Compile Update="MainPage.xaml.cs">
+      <Compile Update="View\MainPage.xaml.cs">
         <DependentUpon>MainPage.xaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
@@ -83,11 +83,9 @@
       <MauiXaml Update="AppShell.xaml">
         <SubType>Designer</SubType>
       </MauiXaml>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="View" />
-      <Folder Include="View-Model" />
+      <MauiXaml Update="View\MainPage.xaml">
+        <SubType>Designer</SubType>
+      </MauiXaml>
     </ItemGroup>
 
 </Project>
