--- a/CyberApp.csproj
+++ b/CyberApp.csproj
@@ -55,7 +55,13 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="12.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.5" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+        <PackageReference Include="SQLite" Version="3.13.0" />
         <PackageReference Include="System.Drawing.Common" Version="8.0.0-preview.2.23128.3" />
     </ItemGroup>
 
@@ -90,6 +96,17 @@
       <MauiXaml Update="View\MainPage.xaml">
         <SubType>Designer</SubType>
       </MauiXaml>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Models\Migrations" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="cyber.db" />
+      <Resource Include="cyber.db" />
+      <None Remove="Models\Database\cyber.db" />
+      <Resource Include="Models\Database\cyber.db" />
     </ItemGroup>
 
 </Project>
