--- a/CyberApp.Migrator/CyberApp.Migrator.csproj
+++ b/CyberApp.Migrator/CyberApp.Migrator.csproj
@@ -11,4 +11,11 @@
       <ProjectReference Include="..\CyberApp.Data\CyberApp.Data.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
