--- a/CyberApp.Core/CyberApp.csproj
+++ b/CyberApp.Core/CyberApp.csproj
@@ -110,7 +110,7 @@
     <ItemGroup>
       <None Remove="SQLite001.db3" />
       <EmbeddedResource Include="SQLite001.db3">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
     </ItemGroup>
 
