finish class selection view

--- a/CyberApp.Migrator/CyberApp.Migrator.csproj
+++ b/CyberApp.Migrator/CyberApp.Migrator.csproj
@@ -16,6 +16,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Syncfusion.Maui.Core" Version="21.2.10" />
     </ItemGroup>
 
 </Project>
