--- a/CyberApp.Core/CyberApp.csproj
+++ b/CyberApp.Core/CyberApp.csproj
@@ -62,6 +62,7 @@
         </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
         <PackageReference Include="SQLite" Version="3.13.0" />
+        <PackageReference Include="Syncfusion.Maui.Core" Version="21.2.10" />
         <PackageReference Include="System.Drawing.Common" Version="8.0.0-preview.2.23128.3" />
     </ItemGroup>
 
