--- a/CyberApp.Data/CyberApp.Data.csproj
+++ b/CyberApp.Data/CyberApp.Data.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.5" />
       <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.5" />
+      <PackageReference Include="Syncfusion.Maui.Core" Version="21.2.10" />
     </ItemGroup>
 
 </Project>
